--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,11 @@
 name: qcodes
-channels: 
+channels:
  - defaults
  - conda-forge
 dependencies:
  - h5py=2.6.0
  - matplotlib=2.0.2
- - pyqtgraph 
+ - pyqtgraph
  - python=3.6
  - jsonschema
  - pyvisa
@@ -18,3 +18,4 @@ dependencies:
  - hypothesis
  - pytest
  - pytest-runner
+ - pywinusb
