Revert "dont treat warnings as errors"
This reverts commit e8367b970fbb5164462f3a9ddd608706f5d7dcab.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
     - py.test --cov=qcodes --cov-report xml --cov-config=.coveragerc
     - |
       cd ../docs
-      make html-api
+      make SPHINXOPTS="-W" html-api
     - cd ..
 
 after_success:
