--- a/qcodes/instrument/sims/Keysight_33xxx.yaml
+++ b/qcodes/instrument/sims/Keysight_33xxx.yaml
@@ -31,6 +31,24 @@ devices:
           q: "OUTPut:SYNC:SOURce {}"
           r: "OK"
 
+      chan1 function type:
+        default: SIN
+        getter:
+          q: "SOURce1:FUNCtion?"
+          r: "{}"
+        setter:
+          q: "SOURce1:FUNCtion {}"
+          r: "OK"
+
+      chan1 burst ncycles:
+        default: 1
+        getter:
+          q: "SOURce1:BURSt:NCYCLes?"
+          r: "{}"
+        setter:
+          q: "SOURce1:BURSt:NCYCles {}"
+          r: "OK"
+
 resources:
   GPIB::1::INSTR:
     device: device 1
