1) Added airspeed-velocity to the environment 2) Added a benchmark folder in the project root 3) Added a airspeed-velocity configuration file to the project (added exception in the gitignore file to include the config file in the repo)

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ target/
 *.dat
 *.hdf5
 *.json
+!asv.conf.json
 
 # Temporary files
 *.md~
@@ -83,3 +84,6 @@ docs/examples/data/*
 
 # Mac files
 .DS_Store
+
+# Benchmark results and environments
+.asv
