--- a/qcodes/instrument/sims/Tektronix_AWG5208.yaml
+++ b/qcodes/instrument/sims/Tektronix_AWG5208.yaml
@@ -2,7 +2,7 @@
 spec: "1.0"
 
 devices:
-  device 1:  # AWG 70001A
+  device 1:  # AWG5208
     eom:
       GPIB INSTR:
         q: "\n"
@@ -14,7 +14,7 @@ devices:
 
     properties:
       sample rate:
-        default: 5e6
+        default: 5000000
         getter:
           q: "CLOCk:SRATe?"
           r: "{}"
