Add test timers output to ci to educate our selfs about times on different platforms

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_script: # configure a headless display to test plot generation
 
 script:
     - cd qcodes
+    - python test_timers.py
     - py.test --cov=qcodes --cov-report xml --cov-config=.coveragerc
     # build docs with warnings as errors
     - |
