--- a/qcodes/instrument/sims/keysight_b220x.yaml
+++ b/qcodes/instrument/sims/keysight_b220x.yaml
@@ -123,9 +123,12 @@ devices:
           - q: ":AGND:CHAN:ENAB (@{ch_id}0101)"
           - q: ":COUP:PORT:DET"
           - q: ":CLOS (@00248)"
+          - q: ":CLOS (@01012)"
           - q: ":OPEN (@00248)"
           - q: ":OPEN (@00322)"
           - q: ":OPEN:CARD 0"
+          - q: ":CLOS:CARD? 0"
+            r: "(@00248,01012)"
 
 
     dialogues:
